# ledgerbeetle

./: .dockerignore  .env  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  openapi.json
.github/: FUNDING.yml
bruno/: account balances by date.bru  account balances.bru  account income statements.bru  accountnames.bru  acount balances.bru  acounttransactions.bru  add prepare.bru  add.bru  bruno.json  commodities.bru  m add.bru  m import csv.bru  m migrate.bru  migrate.bru  openapi.bru  q account balances by date.bru  q account balances.bru  q account income statements.bru  q account names all.bru  q acount transactions.bru  q add prepare.bru  q commodities all.bru  q export csv.bru  q export hledger.bru  transactions.bru  version.bru
bruno/environments/: .gitignore  dev.bru  hledger_tb.bru
frontend/: .eslintignore  .npmrc  Caddyfile  Dockerfile  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  hey-api.ts  provider.tsx  spreadsheetFormula.d.ts  spreadsheetFormula.js
frontend/src/api/: accountbalances.ts  (+5 more)
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-02-20-205331_create_accounts/: up.sql
migrations/2025-02-21-010503_create_transfer_details/: down.sql  up.sql
migrations/2025-02-21-012403_create_currencies/: down.sql  up.sql
src/: e2e_test.rs  hledger.rs  http_err.rs  lib.rs  main.rs  models.rs  responses.rs  routes.rs  schema.rs  tb_utils.rs
(+21 files in other folders)
