[package]
name = "hledger_tb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
clap = "2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
regex = "1.11.1"
serde = "1.0.218"
tigerbeetle-unofficial = "=0.8.0"
tokio = { version = "1.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
