[package]
name = "ledgerbeetle"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
axum-macros = "0.5.0"
axum-test = "17.2.0"
clap = "2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
itertools = "0.14.0"
log = { version = "0.4", features = [
   "max_level_debug",
   "release_max_level_warn",
] }
regex = "1.11.1"
serde = "1.0.218"
tigerbeetle-unofficial = { version = "=0.8.0" } #, path="tigerbeetle-unofficial"}
tokio = { version = "1.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
